@@ -54,15 +54,5 @@
         <version>1.7.0</version>
       </extension>
     </extensions>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0</version>
-        <configuration>
-          <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 </project>
